# hasscan

./: .ghci  .gitignore  README.md  default.nix  hasscan.cabal  stack.yaml
.github/workflows/: deploy.yml
src/: Main.hs
