name:                hasscan
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hasscan#readme
license:             BSD3
license-file:        LICENSE
author:              Mariusz Ryndzionek
maintainer:          mryndzionek@gmail.com
copyright:           2018 Mariusz Ryndzionek
category:            Other
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hasscan
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wno-missing-signatures
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, opencv, bytestring,
                       linear, mtl, primitive, vector, lens,
                       friday, friday-juicypixels, JuicyPixels, system-filepath
